add link to wildcats file from index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <p class="line1">This text will appear red.</p>
     <p id="line2">This text will also appear red.</p>
+    <p> <a href="wildcats.html">Go TO WILDCATS</a></p> 
 </body>
 </html>
