--- a/wildcats.html
+++ b/wildcats.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wildcats</title>
-    <link rel="stylesheet" href="styles.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
 </head>
 <body>
     <h1>Wildcats</h1>
@@ -31,6 +31,6 @@
     <p>It's a little-known fact that wildcats are actually great dance partners. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
 
-    
+
 </body>
 </html>
