--- a/wildcats.html
+++ b/wildcats.html
@@ -31,6 +31,8 @@
     <p>It's a little-known fact that wildcats are actually great dance partners. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
 
+    <p>wildcats are versatile creatures that can live in <span class="important">many different climates</span> they can live in <span class="cat-climate">the jungle</span>, <span class="cat-climate">the mountains</span>, and even <span class="cat-climate">the desert</span>look carefully and you might find one in <span class="important">your own compound.</span></p>
+
 
 </body>
 </html>
