--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p class="line1">This text will appear red.</p>
     <p id="line2">This text will also appear red.</p>
     <p> <a href="wildcats.html">Go TO WILDCATS</a></p> 
+    <p> <a href="mango.html">GO TO MANGO</a></p>
 </body>
 </html>
