add boxmodel file, specification for magin, padding and boarder

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p id="line2">This text will also appear red.</p>
     <p> <a href="wildcats.html">Go TO WILDCATS</a></p> 
     <p> <a href="mango.html">GO TO MANGO</a></p>
+    <p> <a href="sidebar.html">GO TO sidebar</a></p>
+    <p> <a href="column.html">GO TO column</a></p>
+    <p> <a href="boxmodel.html">GO TO boxmodel</a></p>
 </body>
 </html>
