add cascading file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p> <a href="sidebar.html">GO TO sidebar</a></p>
     <p> <a href="column.html">GO TO column</a></p>
     <p> <a href="boxmodel.html">GO TO boxmodel</a></p>
+    <p> <a href="cascading-and-inheritance.html">GO TO cascading and inheritance</a></p>
 </body>
 </html>
